<resources>
    <string name="app_name">Steam Link Companion</string>
    <string name="githubPage">https://github.com/excelsi0r/SteamLinkBluetoothKeybordMouseCompanion#setup</string>
    <string name="connectButton">Connect</string>
    <string name="editButton">Edit</string>
    <string name="exitButton">Exit</string>
    <string name="pairedDevicesText">Paired Devices</string>
    <string name="scanDevicesText">Other Devices Available</string>
    <string name="scanDevicesButton">Scan</string>
    <string name="cancelDevicesButton">Cancel</string>
    <string name="selectDevice">Select Device to Connect</string>
    <string name="yourMACviewText">This is your device MAC address:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="autoConnectTitle">Auto-Connect</string>
    <string name="autoConnectDescription">Connecting to saved device in: </string>
    <string name="savedDeviceNotAvailable">Saved device is not available</string>
    <string name="cannotSave">Cannot save device</string>
    <string name="connectingText">Attempting to connect...</string>
    <string name="failedToConnect">Failed to connect</string>
</resources>
